# bscope

./: .gitignore  Makefile.in  README.md  bscope.conf.simple  bscope.init  configure  configure.ac  include.mk.in
src/: Makefile.in  callback.c  defined.h  functions.c  ini.c  main.c  report.c  session.c  session.h  status.c  utils.c
src/libnids-1.24/: configure  configure.in
src/libnids-1.24/src/: checksum.c  libnids.c  nids.h
